<resources>
    <string name="app_name">AndroidRUCafe</string>
    <string-array name="donut_type">
        <item>yeast</item>
        <item>yeast</item>
        <item>yeast</item>
        <item>yeast</item>
        <item>yeast</item>
        <item>yeast</item>
        <item>cake</item>
        <item>cake</item>
        <item>cake</item>
        <item>hole</item>
        <item>hole</item>
        <item>hole</item>
    </string-array>
    <string-array name="donut_flavor">
        <item>plain</item>
        <item>choco</item>
        <item>vanilla</item>
        <item>mocha</item>
        <item>ube</item>
        <item>glazed</item>
        <item>mocha</item>
        <item>ube</item>
        <item>glazed</item>
        <item>plain</item>
        <item>choco</item>
        <item>vanilla</item>
    </string-array>
    <string name="missingFieldsError">Missing necessary fields</string>
    <string name="orderSandwich">Order Sandwich</string>
    <string name="orderDonut">Order Donut</string>
    <string name="orderCoffee">Order Coffee</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="allOrders">All Orders</string>
    <string name="placeOrder">Place Order</string>
    <string name="removeInstructions">Tap item to remove</string>
    <string name="home">Home</string>
    <string name="quantity">Quantity:</string>
    <string name="size">Size:</string>
    <string name="sweetCream">Sweet Cream</string>
    <string name="caramel">Caramel</string>
    <string name="frenchVanilla">French Vanilla</string>
    <string name="mocha">Mocha</string>
    <string name="irishCream">Irish Cream</string>
    <string name="addToOrder">Add To Order</string>
    <string name="menuOptions">Menu Options</string>
    <string name="cartItems">Cart Items (click to put back)</string>
    <string name="addToCart">To Cart</string>
    <string name="bread">Bread:</string>
    <string name="bagel">Bagel</string>
    <string name="sourDough">Sour Dough</string>
    <string name="wheatToast">Wheat Toast</string>
    <string name="protein">Protein:</string>
    <string name="beef">Beef</string>
    <string name="fish">Fish</string>
    <string name="chicken">Chicken</string>
    <string name="addons">Addons:</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="cheese">Cheese</string>
    <string name="onion">Onion</string>
    <string name="orderHistory">Order History</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="selectPastOrder">Select past order:</string>
</resources>